fix gradle jdk config